Store CachedData in the cache :)